--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Welcome to my site!
 
 <!-- image of a duck -->
 
-I am currently learning to code with Code First Girls. Going over everything from how the 
+I am currently learning to code with Code First Girls. Going over everything from how the
 internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
 Everyone should learn to code, here are some pretty good reasons why...
 
@@ -21,3 +21,5 @@ A web browser (I am using chrome)
 Some HTML, CSS and JS files
 
 Follow my progress on github
+
+Lets see shall we....
