--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+Hello World
 
-<html>
-<p>I am currently learning to code with Code First Girls. Going over everything from how the
+Welcome to my site!
+
+<!-- image of a duck -->
+
+I am currently learning to code with Code First Girls. Going over everything from how the 
 internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
 Everyone should learn to code, here are some pretty good reasons why...
 
@@ -16,7 +20,4 @@ A text editor (I am using atom)
 A web browser (I am using chrome)
 Some HTML, CSS and JS files
 
-Follow my progress on github </p>
-
-<p> If you can read me this has been successful woo </p>
-</html>
+Follow my progress on github
