starting code for Tory's page

--- a/Torys Page.html
+++ b/Torys Page.html
@@ -1,26 +1,67 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title> Food for Thought </title>
+  <link rel="stylesheet" type="text/css" href="css/Tory-Styles.css">
+</head>
 
-Welcome to my site!
-Yay I think I've made it
+<body>
+  <div>
+    <h1>FOOD FOR THOUGHT</h1>
+    <h2>Some recipes and ideas to help you cook up an (envornmentally friendly) storm!</h2>
 
-<!-- image of a duck -->
+  </div>
 
-I am currently learning to code with Code First Girls. Going over everything from how the
-internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
-Everyone should learn to code, here are some pretty good reasons why...
+  <div>
+    <h2> Why should we consider the environment when we eat? </h2>
+    <p> Human diets inextricably link health and environmental sustainability, and have the potential to nurture both.
+<br>
+<br>
+Increased food production over the past 50 years has helped improve life expectancy and reduce hunger, infant and child mortality rates, and global poverty. However, such benefits are now being offset by shifts towards unhealthy diets.
+<br>
+<br>
+Globally, as nations have urbanized and citizen incomes have increased, traditional diets (typically higher in quality plant-based foods), have transitioned to a “Western-style dietary pattern,” characterized by high consumption of calories, highly processed foods (refined carbohydrates, added sugars, sodium, and unhealthy fats), and high amounts of animal products.
+<br>
+<br>
+Along with the negative human health impacts associated with this nutrition transition, this dietary pattern is also unsustainable. Current food production is already driving climate change, biodiversity loss, pollution, and drastic changes in land and water use.
+<br>
+<br>
+Transitioning towards healthy diets from sustainable food systems—especially with our global population slated to reach 10 billion by 2050—poses an unprecedented challenge.
+<br>
+<br>
+However, research by an international working group of scientists shows this “Great Food Transformation” could be achievable through a combination of dramatic reductions in food losses and waste, major improvements in food production practices, and substantial dietary shifts toward mostly plant-based dietary patterns.   </p>
+  </div>
 
-HTML is cool
-CSS is cooler
-JS is the best
+  <div>
+<h2> Recipes for cooking up a savvy storm </h2>
+<p>   </p>
+  </div>
 
-What do you need to create a website?
+  <div>
+<h2> ...and for when you want someone else to cook that storm for you </h2>
+<p>  </p>
+  </div>
 
-Not much!
-A computer (always a good start)
-A text editor (I am using atom)
-A web browser (I am using chrome)
-Some HTML, CSS and JS files
+  <div>
+<h3> 5 tips for sustainable eating </h3>
+<h4> 1. Prioritise plants </h4>
+<p> The <a href=https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/> Healthy Eating Plate </a> suggests filling half your plate with vegetables and fruits as part of an optimal diet, but planning our meals aroundproduce_cabbage_beets produce benefits the planet as well. Shifting to a more plant-based way of eating will help reduce freshwater withdrawals and deforestation —a win-win for both our personal health and the environment.</p>
+<br>
+<h4> 2. Minimise meat </h4>
+<p> The Healthy Eating Plate already suggests reducing red meat, and now there’s another reason to treat it more as a condiment than a main dish. Meat production is a substantial contributor to greenhouse gas emissions – beef production especially – and the environmental burden deepens, as raising and transporting livestock also requires more food, water, land, and energy than plants (3). To eat for our own health as well as that of the planet, we should consider picking non-meat proteins such as nuts and legumes.</p>
+<br>
+<h4> 3. Select new seafood </h4>
+<p>Fish can be a healthy choice if part of an overall fisherman_reelhealthy dietary style, but some species are at risk of being overfished, or produced in ways that harm the marine environment. If your go-to variety of fish is on the “avoid” list, consider trying some new seafood.</p>
+<br>
+<h4> 4. look local </h4>
+<p>Exploring farmers markets helps you find fresh produce grown locally, but equally important, you can meet the people who produce your food. Such relationships are opportunities for education: you can learn how your food was grown, when it was harvested, and even how to prepare it.</p>
+<br>
+<h4> 5. Eat mindfully </h4>
+<p>One of the simplest things you can do to eat more  spoon_flowerssustainably is to practice mindful eating. Focusing on what you’re eating allows you to reflect on where your food came from and how it is nourishing your body. Additionally, by tuning in to your hunger signals you may learn that you don’t need as much food as you thought, and resize your meals accordingly. By paying more attention to how we eat and thinking about the “bigger picture,” we may alter our food consumption and reduce food waste, as well as become encouraged to seek out more sustainable food sources.</p>
+  </div>
 
-Follow my progress on github
+</body>
+</html>
 
-Lets see shall we....
+
+<img src="/Users/toryerskine/Documents/Coding_Course/beginners-week-one-master/Week-1-project/duck.jpg" als="a local image" width="200px">
