Draft 1 of page

--- a/Charlottes page.html
+++ b/Charlottes page.html
@@ -1,25 +1,24 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title> Vegan Ingredients & Alternatives </title>
+  <link rel="stylesheet" type="text/css" href="CSS/Styles.css">
+</head>
 
-Welcome to my site!
+<body>
+  <div>
+    <h1> Vegan Ingredients & Alternatives </h1>
+    <h2> Our top 10 ingrediants and food alternatives to lead a Vegan life! </h2>
+  </div>
+<br>
+<div>
+  <p> Thinking of going vegan, or including more vegan options to your repertoire? Switching to a vegan diet can be daunting, but to ease the transition, here are some accessible substitutes.</p>
+    <ul>
+      <li> Milk - Popular non-dairy milks include oat, hazelnut, cashew, soy, almond and hemp. With so many non-dairy alternatives to choose from you are bound to find one to tickle your tastebuds! Non- dairy milks are fairy accessible now in large supermarket stores but if you find yourself struggling in the supermarket aisles, look no further than this easy guide <a href="https://www.bbcgoodfood.com/howto/guide/how-make-dairy-free-milk"> to make your own! </a> </li>
+      <li> Butter - As well as vegan butters available, margerine serves as an excellent alternative to butter. </li>
+      <li> Meat - Thanks to our veggie friends, meat substitutes are generally very accessible in everyday supermarkets. Among the products on the market now that will substitute for meat are: veggie burgers, veggie meatballs, veggie sausages, veggie ground “beef,” soy chicken patties and nuggets and even veggie bacon! </li>
+    </ul>
+</div>
 
-<!-- image of a duck -->
-
-I am currently learning to code with Code First Girls. Going over everything from how the
-internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
-Everyone should learn to code, here are some pretty good reasons why...
-
-HTML is cool
-CSS is cooler
-JS is the best
-
-What do you need to create a website?
-
-Not much!
-A computer (always a good start)
-A text editor (I am using atom)
-A web browser (I am using chrome)
-Some HTML, CSS and JS files
-
-Follow my progress on github
-
-Lets see shall we....
+</body>
+</html>
