--- a/Torys Page.html
+++ b/Torys Page.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title> Food for Thought </title>
-  <link rel="stylesheet" type="text/css" href="css/Tory-Styles.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="css/ToryStyles.css" rel="stylesheet">
 </head>
 
 <body>
