Revert "renaming index, and other changes to my code"
This reverts commit c0091993ec92bce31c33555beded5d2f637fc9b0.

--- a/Torys Page.html
+++ b/Torys Page.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <title> Food for Thought </title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="css/ToryStyles.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/Tory-Styles.css">
 </head>
 
 <body>
