--- a/TorysPage.html
+++ b/TorysPage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title> Food for Thought </title>
-  <link rel="stylesheet" type="text/css" href="css/Tory-Styles.css">
+  <link rel="stylesheet" type="text/css" href="css/ToryStyles.css">
 </head>
 
 <body>
