--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Starter Template for Bootstrap</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="css/styles.css" rel="stylesheet">
+  </head>
+
+<body>
 Hello World
 
-Welcome to my site!
+Welcome to our site!
 
-<!-- image of a duck -->
-
-I am currently learning to code with Code First Girls. Going over everything from how the
-internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
-Everyone should learn to code, here are some pretty good reasons why...
-
-HTML is cool
-CSS is cooler
-JS is the best
-
-What do you need to create a website?
-
-Not much!
-A computer (always a good start)
-A text editor (I am using atom)
-A web browser (I am using chrome)
-Some HTML, CSS and JS files
-
-Follow my progress on github
-
-Lets see shall we....
+Let us show you why the environment is important 
+</body>
