Updates by tory

--- a/TorysPage.html
+++ b/TorysPage.html
@@ -2,10 +2,40 @@
 <html>
 <head>
   <title> Food for Thought </title>
-  <link rel="stylesheet" type="text/css" href="css/ToryStyles.css">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="description" content="">
+      <meta name="author" content="">
+
+      <title>Attenborough's Angels</title>
+
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 
 <body>
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="TorysPage.html">Food for Thought</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Another Link</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <div>
     <h1>FOOD FOR THOUGHT</h1>
     <h2>Some recipes and ideas to help you cook up an (envornmentally friendly) storm!</h2>
@@ -34,31 +64,80 @@ However, research by an international working group of scientists shows this “
 
   <div>
 <h2> Recipes for cooking up a savvy storm </h2>
-<p>   </p>
+<br>
+<br>
+    <div class="container">
+    <div class="row">
+    <div class="col-4">
+        <img src="ButternutSquash.jpg" als="a local image" width="300px">
+    </div>
+    <div class="col-4">
+      <img src="Augbergine.jpg" als="a local image" width="300px">
+    </div>
+    <div class="col-4">
+        <img src="BillionareLasagne.jpg" als="a local image" width="300px">
+    </div>
+    </div>
   </div>
+  <br>
+  <br>
+
 
   <div>
 <h2> ...and for when you want someone else to cook that storm for you </h2>
 <p>  </p>
   </div>
 
-  <div>
-<h3> 5 tips for sustainable eating </h3>
-<h4> 1. Prioritise plants </h4>
-<p> The <a href=https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/> Healthy Eating Plate </a> suggests filling half your plate with vegetables and fruits as part of an optimal diet, but planning our meals aroundproduce_cabbage_beets produce benefits the planet as well. Shifting to a more plant-based way of eating will help reduce freshwater withdrawals and deforestation —a win-win for both our personal health and the environment.</p>
+<div>
+  <h3> 5 tips for sustainable eating </h3>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-5">
+        <h4> 1. Prioritise plants </h4>
+        <p> The <a href=https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/> Healthy Eating Plate </a> suggests filling half your plate with vegetables and fruits as part of an optimal diet, but planning our meals aroundproduce_cabbage_beets produce benefits the planet as well. Shifting to a more plant-based way of eating will help reduce freshwater withdrawals and deforestation —a win-win for both our personal health and the environment.</p>
+      </div>
+    </div>
+
 <br>
-<h4> 2. Minimise meat </h4>
-<p> The Healthy Eating Plate already suggests reducing red meat, and now there’s another reason to treat it more as a condiment than a main dish. Meat production is a substantial contributor to greenhouse gas emissions – beef production especially – and the environmental burden deepens, as raising and transporting livestock also requires more food, water, land, and energy than plants (3). To eat for our own health as well as that of the planet, we should consider picking non-meat proteins such as nuts and legumes.</p>
+
+    <div class="row">
+      <div class="col-5">
+        <h4> 2. Minimise meat </h4>
+        <p> The Healthy Eating Plate already suggests reducing red meat, and now there’s another reason to treat it more as a condiment than a main dish. Meat production is a substantial contributor to greenhouse gas emissions – beef production especially – and the environmental burden deepens, as raising and transporting livestock also requires more food, water, land, and energy than plants (3). To eat for our own health as well as that of the planet, we should consider picking non-meat proteins such as nuts and legumes.</p>
+      </div>
+    </div>
+
 <br>
-<h4> 3. Select new seafood </h4>
-<p>Fish can be a healthy choice if part of an overall fisherman_reelhealthy dietary style, but some species are at risk of being overfished, or produced in ways that harm the marine environment. If your go-to variety of fish is on the “avoid” list, consider trying some new seafood.</p>
+
+    <div class="row">
+      <div class="col-5">
+        <h4> 3. Select new seafood </h4>
+        <p>Fish can be a healthy choice if part of an overall fisherman_reelhealthy dietary style, but some species are at risk of being overfished, or produced in ways that harm the marine environment. If your go-to variety of fish is on the “avoid” list, consider trying some new seafood.</p>
+      </div>
+    </div>
+
 <br>
-<h4> 4. look local </h4>
-<p>Exploring farmers markets helps you find fresh produce grown locally, but equally important, you can meet the people who produce your food. Such relationships are opportunities for education: you can learn how your food was grown, when it was harvested, and even how to prepare it.</p>
+
+    <div class="row">
+      <div class="col-5">
+        <h4> 4. look local </h4>
+        <p>Exploring farmers markets helps you find fresh produce grown locally, but equally important, you can meet the people who produce your food. Such relationships are opportunities for education: you can learn how your food was grown, when it was harvested, and even how to prepare it.</p>
+      </div>
+    <div>
+
 <br>
-<h4> 5. Eat mindfully </h4>
-<p>One of the simplest things you can do to eat more  spoon_flowerssustainably is to practice mindful eating. Focusing on what you’re eating allows you to reflect on where your food came from and how it is nourishing your body. Additionally, by tuning in to your hunger signals you may learn that you don’t need as much food as you thought, and resize your meals accordingly. By paying more attention to how we eat and thinking about the “bigger picture,” we may alter our food consumption and reduce food waste, as well as become encouraged to seek out more sustainable food sources.</p>
-  </div>
+
+    <div class="row">
+      <div class="col-5">
+        <h4> 5. Eat Mindfully </h4>
+        <p>One of the simplest things you can do to eat more spoon_flowerssustainably is to practice mindful eating. Focusing on what you’re eating allows you to reflect on where your food came from and how it is nourishing your body. Additionally, by tuning in to your hunger signals you may learn that you don’t need as much food as you thought, and resize your meals accordingly. By paying more attention to how we eat and thinking about the “bigger picture,” we may alter our food consumption and reduce food waste, as well as become encouraged to seek out more sustainable food sources.</p>
+      </div>
+      <div>
+
+</div>
+</div>
+
 
 </body>
 </html>
