--- a/TorysPage.html
+++ b/TorysPage.html
@@ -11,12 +11,14 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+      <link href="ToryStyles.css" rel="stylesheet">
+
 </head>
 
 <body>
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#"> <img src="World.png" als="a local image" width="50px"> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -37,6 +39,12 @@
   </nav>
 
   <div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
     <h1>FOOD FOR THOUGHT</h1>
     <h2>Some recipes and ideas to help you cook up an (envornmentally friendly) storm!</h2>
 
@@ -68,14 +76,25 @@ However, research by an international working group of scientists shows this “
 <br>
     <div class="container">
     <div class="row">
-    <div class="col-4">
-        <img src="ButternutSquash.jpg" als="a local image" width="300px">
+    <div class="col-sm">
+        <a href=https://www.bosh.tv/recipes/butternut-squash-with-spiced-red-wine-jus-roast-spiced-nuts title="Butternut Squash with Spiced Red Wine Jus">
+        <img src="ButternutSquash.jpg" als="a local image" width="300px" height="300px">
+      </a>
+      <p> Roasted Butternut Squash </p>
     </div>
-    <div class="col-4">
-      <img src="Augbergine.jpg" als="a local image" width="300px">
+
+    <div class="col-sm">
+      <a href=https://www.bbcgoodfood.com/recipes/miso-aubergines title="Miso Aubergine">
+      <img src="Augbergine.jpg" als="a local image" width="300px" height="300px">
+      </a>
+      <p> Miso Aubergines </p>
     </div>
-    <div class="col-4">
-        <img src="BillionareLasagne.jpg" als="a local image" width="300px">
+
+    <div class="col-sm">
+      <a href=https://www.bosh.tv/recipes/big-bosh-billionaire-lasagna title="Billionaire Lasagne">
+      <img src="BillionareLasagne.jpg" als="a local image" width="300px" height="300px">
+      </a>
+      <p> Billionaire Lasagne </p>
     </div>
     </div>
   </div>
@@ -85,62 +104,36 @@ However, research by an international working group of scientists shows this “
 
   <div>
 <h2> ...and for when you want someone else to cook that storm for you </h2>
-<p>  </p>
+<p> For a mordern, healthy, "sexy" treat:     <a href="https://www.kaliforniakitchen.co.uk/"> <img src="KaliforniaKitchen.png" als="a local image" width="80px" height="50px"></a>      is serving up some delicious, healthy, vegan delights </p>
+<p> ...or, for something a bit more naughty, head to       <a href="http://templeofseitan.co.uk/"> <img src="TempleofSeitan.png" als="a local image" width="50px" height="80px"> </a>      for some vegan takes on your fast food favourites </p>
+<p> For those special occasions,      <a href="http://templeofseitan.co.uk/"> <img src="Farmacy.png" als="a local image" width="80px" height="50px"> </a>       has a fantastic (and vegan!) high tea </p>
+
   </div>
+
+<br>
 
 <div>
   <h3> 5 tips for sustainable eating </h3>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-5">
-        <h4> 1. Prioritise plants </h4>
-        <p> The <a href=https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/> Healthy Eating Plate </a> suggests filling half your plate with vegetables and fruits as part of an optimal diet, but planning our meals aroundproduce_cabbage_beets produce benefits the planet as well. Shifting to a more plant-based way of eating will help reduce freshwater withdrawals and deforestation —a win-win for both our personal health and the environment.</p>
-      </div>
-    </div>
+<ol>
+      <li>  <b> Prioritise plants </b>
+            <ul> <li> The <a href=https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/> Healthy Eating Plate </a> suggests filling half your plate with vegetables and fruits as part of an optimal diet, but planning our meals aroundproduce_cabbage_beets produce benefits the planet as well. Shifting to a more plant-based way of eating will help reduce freshwater withdrawals and deforestation —a win-win for both our personal health and the environment. </li> </ul> </li>
+      <li>  <b> Minimise meat </b>
+            <ul> <li> The Healthy Eating Plate already suggests reducing red meat, and now there’s another reason to treat it more as a condiment than a main dish. Meat production is a substantial contributor to greenhouse gas emissions – beef production especially – and the environmental burden deepens, as raising and transporting livestock also requires more food, water, land, and energy than plants (3). To eat for our own health as well as that of the planet, we should consider picking non-meat proteins such as nuts and legumes. </li> </ul> </li>
+      <li>  <b> Select new seafood </b>
+            <ul> <li> Fish can be a healthy choice if part of an overall fisherman_reelhealthy dietary style, but some species are at risk of being overfished, or produced in ways that harm the marine environment. If your go-to variety of fish is on the “avoid” list, consider trying some new seafood. </li> </ul> </li>
+      <li>  <b> Look Local </b>
+            <ul> <li> Exploring farmers markets helps you find fresh produce grown locally, but equally important, you can meet the people who produce your food. Such relationships are opportunities for education: you can learn how your food was grown, when it was harvested, and even how to prepare it.</li> </ul> </li>
+      <li>  <b> Eat Mindfully </b>
+            <ul> <li> One of the simplest things you can do to eat more spoon_flowerssustainably is to practice mindful eating. Focusing on what you’re eating allows you to reflect on where your food came from and how it is nourishing your body. Additionally, by tuning in to your hunger signals you may learn that you don’t need as much food as you thought, and resize your meals accordingly. By paying more attention to how we eat and thinking about the “bigger picture,” we may alter our food consumption and reduce food waste, as well as become encouraged to seek out more sustainable food sources. </li> </ul> </li>
 
-<br>
-
-    <div class="row">
-      <div class="col-5">
-        <h4> 2. Minimise meat </h4>
-        <p> The Healthy Eating Plate already suggests reducing red meat, and now there’s another reason to treat it more as a condiment than a main dish. Meat production is a substantial contributor to greenhouse gas emissions – beef production especially – and the environmental burden deepens, as raising and transporting livestock also requires more food, water, land, and energy than plants (3). To eat for our own health as well as that of the planet, we should consider picking non-meat proteins such as nuts and legumes.</p>
-      </div>
-    </div>
-
-<br>
-
-    <div class="row">
-      <div class="col-5">
-        <h4> 3. Select new seafood </h4>
-        <p>Fish can be a healthy choice if part of an overall fisherman_reelhealthy dietary style, but some species are at risk of being overfished, or produced in ways that harm the marine environment. If your go-to variety of fish is on the “avoid” list, consider trying some new seafood.</p>
-      </div>
-    </div>
-
-<br>
-
-    <div class="row">
-      <div class="col-5">
-        <h4> 4. look local </h4>
-        <p>Exploring farmers markets helps you find fresh produce grown locally, but equally important, you can meet the people who produce your food. Such relationships are opportunities for education: you can learn how your food was grown, when it was harvested, and even how to prepare it.</p>
-      </div>
-    <div>
-
-<br>
-
-    <div class="row">
-      <div class="col-5">
-        <h4> 5. Eat Mindfully </h4>
-        <p>One of the simplest things you can do to eat more spoon_flowerssustainably is to practice mindful eating. Focusing on what you’re eating allows you to reflect on where your food came from and how it is nourishing your body. Additionally, by tuning in to your hunger signals you may learn that you don’t need as much food as you thought, and resize your meals accordingly. By paying more attention to how we eat and thinking about the “bigger picture,” we may alter our food consumption and reduce food waste, as well as become encouraged to seek out more sustainable food sources.</p>
-      </div>
-      <div>
-
-</div>
+</ol>
 </div>
 
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+<script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
+<script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
-<img src="/Users/toryerskine/Documents/Coding_Course/beginners-week-one-master/Week-1-project/duck.jpg" als="a local image" width="200px">
