--- a/TorysPage.html
+++ b/TorysPage.html
@@ -98,6 +98,15 @@ However, research by an international working group of scientists shows this “
     </div>
     </div>
   </div>
+
+<div>
+For more recipies, check out:
+<ul>
+<li><a href="https://www.bosh.tv/"> Bosh Kitchen </a> </li>
+<li><a href="https://www.bbcgoodfood.com/recipes/collection/vegan"> BBC Good Food's vegan selection </a> </li>
+<li><a href="http://www.mobkitchen.co.uk/?category=Vegan%20Mob"> Mob Kitchen </a> </li>
+
+  </div>
   <br>
   <br>
 
