--- a/Charlottes page.html
+++ b/Charlottes page.html
@@ -39,8 +39,10 @@
     <br>
     <br>
     <h1> Vegan Ingredients & Alternatives </h1>
-    <h2> Our top 10 ingrediants and food alternatives to lead a Vegan life! </h2>
+    <h2> Our top 5 ingrediants and food alternatives to lead a Vegan life! </h2>
   </div>
+
+  <p> Thinking of going vegan, or including more vegan options to your repertoire? Switching to a vegan diet can be daunting, but to ease the transition, here are some accessible substitutes.</p>
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -50,13 +52,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="Milk">
+        <img class="d-block w-100" src="Milk.jpg" alt="Milk" width="300px">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Second slide" alt="Butter">
+        <<img class="d-block w-100" src="Butter.jpg" alt="Butter" width="300px">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Meat">
+          <<img class="d-block w-100" src="Meat.jpg" alt="Meat" width="300px">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -78,7 +80,7 @@
   </div>
 
 <div>
-  <p> Thinking of going vegan, or including more vegan options to your repertoire? Switching to a vegan diet can be daunting, but to ease the transition, here are some accessible substitutes.</p>
+
     <ul>
       <li> Milk - Popular non-dairy milks include oat, hazelnut, cashew, soy, almond and hemp. With so many non-dairy alternatives to choose from you are bound to find one to tickle your tastebuds! Non- dairy milks are fairy accessible now in large supermarket stores but if you find yourself struggling in the supermarket aisles, look no further than this easy guide <a href="https://www.bbcgoodfood.com/howto/guide/how-make-dairy-free-milk"> to make your own! </a> </li>
       <li> Butter - As well as vegan butters available, margerine serves as an excellent alternative to butter. </li>
