Work on the About Page

--- a/TorysPage.html
+++ b/TorysPage.html
@@ -11,11 +11,13 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-      <link href="ToryStyles.css" rel="stylesheet">
+      <link href="css/ToryStyles.css" rel="stylesheet">
 
 </head>
 
 <body>
+
+<div class="container">
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="#"> <img src="World.png" als="a local image" width="50px"> </a>
@@ -137,6 +139,7 @@ For more recipies, check out:
             <ul> <li> One of the simplest things you can do to eat more spoon_flowerssustainably is to practice mindful eating. Focusing on what you’re eating allows you to reflect on where your food came from and how it is nourishing your body. Additionally, by tuning in to your hunger signals you may learn that you don’t need as much food as you thought, and resize your meals accordingly. By paying more attention to how we eat and thinking about the “bigger picture,” we may alter our food consumption and reduce food waste, as well as become encouraged to seek out more sustainable food sources. </li> </ul> </li>
 
 </ol>
+</div>
 </div>
 
 
