--- a/Charlottespage.html
+++ b/Charlottespage.html
@@ -159,7 +159,7 @@
       </div>
       <div class="col">
         <div class="card mb-4 shadow-sm">
-          <img class="d-block w-100" src="Aquafaba.jpg" alt="Aquafaba" style="width:100%; height:225px;">
+          <img class="d-block w-100" src="Tofu.jpg" alt="Tofu" style="width:100%; height:225px;">
           <div class="card-body">
             <p class="card-text">9. Tofu- Tofu can be sliced, diced, or cubed to achieve a meaty consistency. For best results, freeze a package of tofu, and then defrost in the refrigerator overnight.</p>
             <div class="d-flex justify-content-between align-items-center">
